# security-aware-internal-API

./: .gitignore  README.md  pyproject.toml
data/: benign_requests.json  malformed_requests.json  privilege_escalation_attempts.json  rate_limit_abuse.json
src/: __init__.py  main.py
src/auth/: __init__.py  oauth.py  scopes.py
src/logging/: __init__.py  security_logger.py
src/middleware/: __init__.py  rate_limit.py
src/models/: __init__.py  requests.py  responses.py
src/routes/: __init__.py  metrics.py  users.py
tests/: conftest.py  test_adversarial.py  test_auth.py  test_rate_limiting.py  test_validation.py
